k8s/gateway.yaml
# # gateway.yaml
# apiVersion: gateway.networking.k8s.io/v1
# kind: Gateway
# metadata:
#   name: wms-gateway
#   namespace: wms
#   annotations:
#     cert-manager.io/cluster-issuer: letsencrypt-prod
# spec:
#   gatewayClassName: nginx
#   infrastructure:
#     annotations:
#       metallb.universe.tf/loadBalancerIPs: "10.0.1.200"
#   listeners:
#   - name: http
#     port: 80
#     protocol: HTTP
#     hostname: "*.datanetwork.online"
#     allowedRoutes:
#       namespaces:
#         from: Same
#   - name: https
#     port: 443
#     protocol: HTTPS
#     hostname: "*.datanetwork.online"
#     tls:
#       mode: Terminate
#       certificateRefs:
#       - name: wms-tls
#     allowedRoutes:
#       namespaces:
#         from: Same


# gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: wms-gateway
  namespace: wms
spec:
  gatewayClassName: nginx
  listeners:
  - name: https-frontend
    port: 443
    protocol: HTTPS
    hostname: "app.datanetwork.online"
    tls:
      mode: Terminate
      certificateRefs:
      - name: wildcard-datanetwork-online-tls
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-backend
    port: 443
    protocol: HTTPS
    hostname: "api.datanetwork.online"
    tls:
      mode: Terminate
      certificateRefs:
      - name: wildcard-datanetwork-online-tls
    allowedRoutes:
      namespaces:
        from: Same
  infrastructure:
    annotations:
      metallb.universe.tf/loadBalancerIPs: "10.0.1.200"
